--- a/BasicComposeCodelab/app/build.gradle
+++ b/BasicComposeCodelab/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'androidx.compose.foundation:foundation:1.4.3'
     implementation 'androidx.compose.runtime:runtime:1.4.3'
     implementation 'androidx.compose.ui:ui:1.4.3'
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
 
     testImplementation 'junit:junit:4.13.2'
 
